Fix game background

--- a/src/pages/game.scss
+++ b/src/pages/game.scss
@@ -1,58 +1,60 @@
-
-  #status {
-    position: absolute;
-    padding: 10px;
-    // background: rgba(17, 19, 20, 0.4);
-    color: #FFF;
-    font-family: "Open Sans", "Roboto", sans-serif;
-    font-size: 16.1px;
-    top: 10px;
-    right: 10px;
-    font-weight: bold;
-    text-align: center;
-    border-radius: 5px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: gray;
-    // filter: drop-shadow(gray 0px 0px 5px);
+#status {
+  position: absolute;
+  padding: 10px;
+  // background: rgba(17, 19, 20, 0.4);
+  color: #fff;
+  font-family: "Open Sans", "Roboto", sans-serif;
+  font-size: 16.1px;
+  top: 10px;
+  right: 10px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: gray;
+  // filter: drop-shadow(gray 0px 0px 5px);
 }
 
 #status .title {
-    font-family: "Open Sans", "Roboto", sans-serif;
-    font-size: 25px;
+  font-family: "Open Sans", "Roboto", sans-serif;
+  font-size: 18px;
 }
 
 #status .me {
-    font-family: "Open Sans", "Roboto", sans-serif;
-    color: #FF8888;
-    font-size: 16.1px;
+  font-family: "Open Sans", "Roboto", sans-serif;
+  color: #ff8888;
+  font-size: 16.1px;
 }
-.exitButton{
-    font-family: "Open Sans", "Roboto", sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    position: relative;
-    box-sizing: border-box;
-    font-size: 14px;
-    cursor: pointer;  
-    color: black;
-    text-decoration: none;
-    background: #f07171;
-    float: right;
-    border: 1px solid #f07171;
-    border-radius: 100px;
-    padding: 6px 10px; 
-    transition: background 0.3s ease 0s, color 0.3s ease 0s; 
-    z-index: 9999999;
+.exitButton {
+  font-family: "Open Sans", "Roboto", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  box-sizing: border-box;
+  font-size: 14px;
+  cursor: pointer;
+  color: black;
+  text-decoration: none;
+  background: #f07171;
+  float: right;
+  border: 1px solid #f07171;
+  border-radius: 100px;
+  padding: 6px 10px;
+  transition:
+    background 0.3s ease 0s,
+    color 0.3s ease 0s;
+  z-index: 9999999;
 }
-.exitButton:active, .exitButton:hover {
-    background: black;
-    color:#f07171;
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+.exitButton:active,
+.exitButton:hover {
+  background: black;
+  color: #f07171;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .checkmark {
@@ -65,7 +67,9 @@
   stroke-miterlimit: 10;
   box-shadow: inset 0px 0px 0px #15bd12;
   fill: none;
-  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+  animation:
+    fill 0.4s ease-in-out 0.4s forwards,
+    scale 0.3s ease-in-out 0.9s both;
 }
 
 .checkmark__circle {
@@ -75,7 +79,7 @@
   stroke-miterlimit: 10;
   stroke: #15bd12;
   fill: none;
-  animation: stroke .6s cubic-bezier(0.650, 0.000, 0.450, 1.000) forwards;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
 
 .checkmark__check {
@@ -83,10 +87,10 @@
   transform-origin: 50% 50%;
   stroke-dasharray: 48;
   stroke-dashoffset: 48;
-  animation: stroke .3s cubic-bezier(0.650, 0.000, 0.450, 1.000) .8s forwards;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
 }
 
-#returnButton{
+#returnButton {
   font-family: "Open Sans", "Roboto", sans-serif;
   display: flex;
   align-items: center;
@@ -95,35 +99,39 @@
   position: relative;
   box-sizing: border-box;
   font-size: 14px;
-  cursor: pointer;  
+  cursor: pointer;
   color: black;
   text-decoration: none;
   background: white;
   float: right;
   border: 1px solid white;
   border-radius: 100px;
-  padding: 10px 15px; 
+  padding: 10px 15px;
   margin: 10px;
-  transition: background 0.3s ease 0s, color 0.3s ease 0s;
+  transition:
+    background 0.3s ease 0s,
+    color 0.3s ease 0s;
 }
-#returnButton:active, #returnButton:hover {
+#returnButton:active,
+#returnButton:hover {
   background: black;
-  color:white;
+  color: white;
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 
 @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 @keyframes bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
   50% {
@@ -138,7 +146,8 @@
 }
 
 @keyframes scale {
-  0%, 100% {
+  0%,
+  100% {
     transform: none;
   }
   50% {
@@ -148,6 +157,6 @@
 
 @keyframes fill {
   100% {
-    box-shadow: inset 0px 0px 0px 30px #15bd12; 
+    box-shadow: inset 0px 0px 0px 30px #15bd12;
   }
 }
