--- a/src/pages/CreateGame.scss
+++ b/src/pages/CreateGame.scss
@@ -10,6 +10,7 @@
 .create-game-card {
   padding: 2vw;
   width: 60vw;
+  max-width: 1000px;
   background-color: #16171b;
   border: 1px solid #272b30;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
