bug fixes, sync with new backend

--- a/src/components/buyInModal/BuyInModal.css
+++ b/src/components/buyInModal/BuyInModal.css
@@ -157,6 +157,8 @@
   text-align: left;
   font-weight: 500;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  margin: auto;
 }
 
 .balance-warning a {
