--- a/src/components/menu/MenuSession.scss
+++ b/src/components/menu/MenuSession.scss
@@ -72,3 +72,62 @@
     }
   }
 }
+
+/* The switch container */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
+/* Hide the default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+/* The knob */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+/* When checked, change background color */
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+/* Move the knob when checked */
+input:checked + .slider:before {
+  transform: translateX(13px);
+}
+
+/* Rounded slider */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
