--- a/src/pages/HowToPlay.scss
+++ b/src/pages/HowToPlay.scss
@@ -16,7 +16,8 @@
 }
 
 .top-blocks-row.row-even .block {
-  background: #0000005e;
+  //background: #0000005e;
+  background: #000000e8;
 }
 
 .head-block {
