--- a/src/components/menu/MenuBar.scss
+++ b/src/components/menu/MenuBar.scss
@@ -1,18 +1,18 @@
 @font-face {
   font-family: 'AzoSuper';
-  src: url('../fonts/AzoSuperTest.otf') format('opentype');
+  src: url('./fonts/AzoSuperTest.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'AzoMono';
-  src: url('../fonts/AzoMonoTest-Bold.otf') format('opentype');
+  src: url('./fonts/AzoMonoTest-Bold.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'AzoSans';
-  src: url('../fonts/AzoSansTest-Bold.otf') format('opentype');
+  src: url('./fonts/AzoSansTest-Bold.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
