--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   color: #fff;
   position: fixed;
-  bottom: 0;
+  bottom: 5px;
   right: 5px;
   width: 100%;
   height: 35px;
@@ -42,7 +42,7 @@
 }
 
 .footerIcon:hover .footerIconImg {
-  opacity: 0.2;
+  opacity: 0.4;
 }
 
 .footerIcon:hover .footerIconImgHover {
