--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -228,12 +228,14 @@ img.token-image {
 }
 
 .banner {
-  background: linear-gradient(90deg, #141516, #26282e);
+  //background: linear-gradient(90deg, #141516, #26282e);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 8px;
   padding: 0rem 1rem;
   display: flex;
   align-items: center;
-  gap: 1.5rem;
   margin: 1rem auto 1rem;
   width: 70vw;
   max-width: 732px;
@@ -250,15 +252,26 @@ img.token-image {
 }
 
 .banner-text {
-  display: flex;
-  flex-direction: column;
-  color: #fff;
+  font-family: 'Poppins', 'Comic Sans MS', cursive, sans-serif;
+  color: #FFD93D;
+  font-weight: 800;
 }
 
 .banner-title {
-  font-size: 1.4rem;
   font-weight: bold;
-  margin: 0;
+  font-family: 'Poppins', 'Comic Sans MS', cursive, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 6rem;
+  font-weight: 800;
+  color: #FFD93D; /* Bright Yellow */
+  text-shadow: 
+    -2px -2px 0 #FF9900, /* Top-left orange shadow */
+    2px -2px 0 #FF9900,  /* Top-right orange shadow */
+    -2px 2px 0 #FF9900,  /* Bottom-left orange shadow */
+    2px 2px 0 #FF9900,   /* Bottom-right orange shadow */
+    0 0 10px #FF9900;    /* Soft glow */
 }
 
 .banner-description {
