--- a/src/components/menu/MenuBar.scss
+++ b/src/components/menu/MenuBar.scss
@@ -49,10 +49,10 @@
 }
 
 .menu-bar {
+  margin-left: 36px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.75rem 1.5rem;
   position: relative;
   &-left {
     display: flex;
@@ -86,7 +86,7 @@
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  margin-right: 2rem;
+  padding: 18px 36px;
 
   a {
     text-decoration: none;
@@ -94,12 +94,8 @@
     font-weight: 500;
     position: relative;
 
-    &:hover {
-      color: #ff4d50;
-    }
 
     &.active {
-      color: #ff4d50;
       font-weight: 400;
       &:after {
         content: "";
@@ -108,7 +104,6 @@
         left: 0;
         width: 100%;
         height: 2px;
-        background-color: #ff4d50;
       }
     }
   }
