--- a/src/pages/Profile.scss
+++ b/src/pages/Profile.scss
@@ -10,8 +10,7 @@
 
 .profile-container {
   background-color: #16171b;
-  min-width: 600px;
-  max-width: 800px;
+  width: 600px;
   margin: 2rem auto;
   padding: 2rem;
   border-radius: 8px;
