--- a/src/components/menu/MenuWallet.scss
+++ b/src/components/menu/MenuWallet.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  border: 1px solid #ff4d50;
+  border: 1px solid #4c9058;
   border-radius: 8px;
 }
 
@@ -18,7 +18,7 @@
 }
 
 .wallet-disconnect-button {
-  background-color: #ff4d4f;
+  background-color: #4c9058;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   color: #ffffff;
