--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,12 +10,17 @@
   height: 35px;
   padding: 0 20px;
   font-family: "Terminus", sans-serif;
+  z-index: 1000;
+  box-sizing: border-box;
 }
 
 .footerIcons {
   display: flex;
   align-items: center;
-  gap: 16px;
+  flex-direction: row;
+  margin-left: 36px;
+  margin-bottom: 3rem;
+  flex-shrink: 0;
 }
 
 .footerIcon {
@@ -51,4 +56,50 @@
 
 .footerCopyright {
   color: #fff;
+}
+
+.follow-x-button {
+  background-color: #1d1f23; /* dark background */
+  color: #e7e9ea; /* light gray text */
+  border-radius: 9999px; /* fully rounded */
+  padding: 6px 12px; /* vertical and horizontal padding */
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid #333; /* thin dark border */
+  display: flex;
+  align-items: center;
+  gap: 8px; /* space between image and text */
+  transition:
+    background 0.2s,
+    transform 0.2s;
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+.follow-x-button:hover {
+  transform: scale(1.03);
+}
+
+.help-btn {
+  background: rgba(69, 69, 69, 0.8);
+  border: 1px solid rgba(69, 69, 69, 1);
+  color: #fff;
+  font-weight: 600;
+  padding: 8px 16px;
+  border-radius: 100px;
+  font-size: 15px;
+  cursor: pointer;
+  transition:
+    background 0.2s,
+    transform 0.2s;
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+.help-btn:hover {
+  font-size: 16px;
+  background: rgba(80, 80, 80, 0.8);
+  transform: scale(1.05);
 }
