--- a/src/pages/Landing.scss
+++ b/src/pages/Landing.scss
@@ -26,41 +26,10 @@
   padding: 18px 36px;
 }
 
-.branding {
-  font-size: 36px;
-  font-weight: 700;
-  font-family: "Lexend", sans-serif;
-  color: #fff;
-  padding: 6px 12px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
 .nav-right {
   display: flex;
   align-items: center;
   gap: 18px;
-}
-
-.help-btn {
-  margin-bottom: 5px;
-  background: rgba(69, 69, 69, 0.8);
-  border: 1px solid rgba(69, 69, 69, 1);
-  color: #fff;
-  font-weight: 600;
-  padding: 8px 16px;
-  border-radius: 100px;
-  font-size: 15px;
-  cursor: pointer;
-  transition:
-    background 0.2s,
-    transform 0.2s;
-}
-.help-btn:hover {
-  font-size: 16px;
-  background: rgba(80, 80, 80, 0.8);
-  transform: scale(1.05);
 }
 
 .coin-pill {
@@ -93,7 +62,7 @@
 
 .overlay-panel {
   background: linear-gradient(to bottom, #ffffff40, #6c6c6c40);
-  border: 9px solid transparent;
+  /*border: 9px solid transparent;*/
   background-clip: padding-box, border-box;
   background-origin: border-box;
   background-image: linear-gradient(to bottom, #ffffff30, #6c6c6c30), linear-gradient(to bottom, #ffffff30, #6c6c6c30);
@@ -104,16 +73,20 @@
   z-index: 10;
   top: 0;
   left: 0;
-  border-radius: 94.5px;
-  backdrop-filter: blur(15px);
+  border-radius: 50px;
+  backdrop-filter: blur(20px);
 }
+
 .overlay-panel:hover {
+  /*
   border: 18px solid transparent;
   background-clip: padding-box, border-box;
   background-origin: border-box;
   background-image: linear-gradient(to bottom, #ffffff30, #6c6c6c30), linear-gradient(to bottom, #ffffff30, #6c6c6c30);
-  backdrop-filter: blur(30px);
+  */
+  backdrop-filter: blur(40px);
 }
+
 
 .panel-image {
   transform: translateY(-100%);
@@ -121,9 +94,11 @@
   z-index: 1;
 }
 
+/*
 .overlay-panel:hover + .panel-image {
   transform: translateY(calc(-100% + 3px));
 }
+*/
 
 .user-panel {
   display: flex;
@@ -192,8 +167,8 @@
 .inner-panel {
   height: 324px;
   width: 468px;
-  border-radius: 94.5px;
-  background: #060606;
+  border-radius: 50px;
+  background: #000000;
   img {
     padding: 30px;
     width: 100%;
@@ -202,11 +177,9 @@
 }
 
 .panel {
-  width: 495px;
-  height: 405px;
-  border: 4.5px solid #4a4a4a;
-  border-radius: 90px;
-  background: rgba(74, 74, 74, 0.9);
+  border: 4.5px solid #2a2a2a;
+  border-radius: 50px;
+  background: #2a2a2a;
   display: flex;
   flex-direction: column;
   align-items: center;
