--- a/src/pages/game.scss
+++ b/src/pages/game.scss
@@ -10,20 +10,16 @@
   cursor: pointer;
   color: black;
   text-decoration: none;
-  background: #f07171;
   float: right;
-  border: 1px solid #f07171;
   border-radius: 100px;
   padding: 6px 10px;
   transition:
     background 0.3s ease 0s,
     color 0.3s ease 0s;
-  z-index: 9999999;
+  z-index: 999;
 }
 .exitButton:active,
 .exitButton:hover {
-  background: black;
-  color: #f07171;
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
