lots of ui fixes, guest games

--- a/src/components/menu/MenuWallet.scss
+++ b/src/components/menu/MenuWallet.scss
@@ -17,6 +17,15 @@
   font-size: 1rem;
 }
 
+.copy-wallet-address {
+  background-color: #4c9058;
+  border-radius: 5px;
+  color: #ffffff;
+  border: none;
+  padding: 0px 5px;
+  cursor: pointer;
+}
+
 .wallet-disconnect-button {
   background-color: #4c9058;
   border-top-right-radius: 5px;
