--- a/src/components/menu/MenuSession.scss
+++ b/src/components/menu/MenuSession.scss
@@ -74,6 +74,16 @@
 }
 
 
+.info-text {
+  background-color: #fef3c7;
+  border: 1px solid #facc15;
+  border-radius: 8px;
+  padding: 0.75rem;
+  color: #000;
+  font-size: 0.9rem;
+  text-align: left;
+}
+
 /* The switch container */
 .switch {
   position: relative;
